add sync times
