# docs/swagger.json
@@ -2703,8 +2703,9 @@
                 "cron": {
                     "type": "string"
                 },
-                "in_progress": {
-                    "type": "boolean"
+                "time_threshold": {
+                    "description": "Threshold from start_time to be considered same run in minutes",
+                    "type": "integer"
                 },
                 "type": {
                     "type": "string"
